--- a/VagrantNetworking/Vagrantfile
+++ b/VagrantNetworking/Vagrantfile
@@ -4,11 +4,12 @@ Vagrant.configure("2") do |config|
   # config.vm.network "forwarded_port", guest: 80, host: 8080
   # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
   # config.vm.network "private_network", ip: "192.168.33.10"
-  config.vm.network "private_network", type: "dhcp"
+  #config.vm.network "private_network", type: "dhcp"
+  config.vm.network "private_network", ip: "192.168.1.26"
 
   # config.vm.network "public_network"
   #
-   config.vm.provider "virtualbox" do |vb|
+  config.vm.provider "virtualbox" do |vb|
 
      vb.gui = false
   
@@ -16,7 +17,7 @@ Vagrant.configure("2") do |config|
      vb.memory = "1024"
    end
 
-   config.vm.provision "shell", inline: <<-SHELL
+  config.vm.provision "shell", inline: <<-SHELL
      apt-get update -y
      apt-get install apache2 -y 
    SHELL
